--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    <header>
     <nav class="navbar bg-light navbar-expand-md navbar-light sticky-top">
       <div class="container-fluid">
-        <a href="#" class="navbar-brand"><img src="../sample/logo.png" alt=""></a>
+        <a href="#" class="navbar-brand"><img src="./sample/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -81,11 +81,11 @@
          </div>
        </div>
         <div class="carousel-item">
-          <img src="../sample/background2.png" class="w-100"  alt="">
+          <img src="./sample/background2.png" class="w-100"  alt="">
           </div>
 
           <div class="carousel-item">
-            <img src="../sample/background3.png" class="w-100" alt="">
+            <img src="./sample/background3.png" class="w-100" alt="">
             </div>
           
      
@@ -148,7 +148,7 @@
             <button type="button" class="btn btn-lg mb-4 bg-primary text-light">Learn More</button>
          </div>
          <div class="col-lg-5 padding">
-            <img src="../sample/desk.png" class="w-100" alt="">
+            <img src="./sample/desk.png" class="w-100" alt="">
          </div>
        </div>
       </div>
@@ -156,7 +156,7 @@
      <figure>
        <div class="fixed-wrap">
          <div id="fixed">
-           <img src="../sample/mac.png" class="w-100" alt="">
+           <img src="./sample/mac.png" class="w-100" alt="">
          </div>
 
        </div>
@@ -166,16 +166,16 @@
       <div class="container-fluid padding">
         <div class="row text-center">
           <div class=" col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="../sample/panda.gif" alt="">
+            <img class="gif img-fluid" src="./sample/panda.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="../sample/poo.gif" alt="">
+            <img class="gif img-fluid" src="./sample/poo.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="../sample/unicorn.gif" alt="">
+            <img class="gif img-fluid" src="./sample/unicorn.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="../sample/chicken.gif" alt="">
+            <img class="gif img-fluid" src="./sample/chicken.gif" alt="">
           </div>
         </div>
       </div>
@@ -194,7 +194,7 @@
       <div class="row padding">
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="../sample/team1.png" alt="">
+            <img class="card-img-top" src="./sample/team1.png" alt="">
             <div class="card-body">
               <h4 class="caard-title">John Doe</h4>
               <p>John is an internet entrepreneur with almost 20 years of experience.</p>
@@ -206,7 +206,7 @@
 
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="../sample/team2.png" alt="">
+            <img class="card-img-top" src="./sample/team2.png" alt="">
             <div class="card-body">
               <h4 class="caard-title">Mary Jo</h4>
               <p>John is an internet entrepreneur with almost 20 years of experience.</p>
@@ -218,7 +218,7 @@
 
         <div class="col-md-4 mb-4">
           <div class="card padding">
-            <img class="card-img-top" src="../sample/team3.png" alt="">
+            <img class="card-img-top" src="./sample/team3.png" alt="">
             <div class="card-body">
               <h4 class="caard-title">Phil Ho</h4>
               <p>John is an internet entrepreneur with almost 20 years of experience.</p>
@@ -238,7 +238,7 @@
             <br>
           </div>
           <div class="col-lg-6 padding">
-            <img src="../sample/bootstrap2.png" class="w-100" alt="">
+            <img src="./sample/bootstrap2.png" class="w-100" alt="">
           </div>
         </div>
       </div>
@@ -262,7 +262,7 @@
         <div class="container-fluid padding bg-dark">
           <div class="row text-light">
             <div class="col-md-4">
-              <img src="../img/w3newbie.png" alt="">
+              <img src="./img/w3newbie.png" alt="">
               <hr class="light text-light">
               <p>555-555</p>
               <p>amail@gmail.com</p>
