--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
       <div class="container-fluid padding">
         <div class="row text-center">
           <div class=" col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="./sample/panda.gif" alt="">
+            <img class="gif img-fluid" src="panda.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="./sample/poo.gif" alt="">
+            <img class="gif img-fluid" src=poo.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="./sample/unicorn.gif" alt="">
+            <img class="gif img-fluid" src="unicorn.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
-            <img class="gif img-fluid" src="./sample/chicken.gif" alt="">
+            <img class="gif img-fluid" src="chicken.gif" alt="">
           </div>
         </div>
       </div>
@@ -194,7 +194,7 @@
       <div class="row padding">
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top" src="./sample/team1.png" alt="">
+            <img class="card-img-top" src="team1.png" alt="">
             <div class="card-body">
               <h4 class="caard-title">John Doe</h4>
               <p>John is an internet entrepreneur with almost 20 years of experience.</p>
