--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <img class="gif img-fluid" src="panda.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
-            <img class="gif img-fluid" src=poo.gif" alt="">
+            <img class="gif img-fluid" src="poo.gif" alt="">
           </div>
           <div class="col-sm-6 col-md-3">
             <img class="gif img-fluid" src="unicorn.gif" alt="">
